fixed notification icon problems for dark mode

--- a/src/assets/css/tailwind.css
+++ b/src/assets/css/tailwind.css
@@ -857,6 +857,10 @@ video {
     background-color: rgb(255 255 255 / var(--tw-bg-opacity));
   }
 
+  .bg-transparent{
+    background-color: transparent;
+  }
+
   .p-0{
     padding: 0px;
   }
